1. Fixed login with Imperva captcha.